HU2 Funcionando con excepciones en postman, falta doc con swagger